     Indonesian, Irish, Italian, Japanese, Korean, Latin, Lithuanian,
     Old English, Portuguese (Brazil), Russian, Slovak, Swedish
 * Lua API:
   * add function wesnoth.get_starting_location
   * The side metatable provides also the side number
     (like wesnoth.sides[i].side, which would be i)
   * add function wesnoth.debug
 * Terrain:
   * Oasis may be placed on any terrain, aliased to base
   * New terrain macro: MOUNTAIN_SINGLE_RANDOM
 * Unit changes and Balancing
   * All mounted units now have forest defines capped at 30%. This reduces their
     defense on forested hills from 40% to 30%
   * Forests now give best defense and worst movement on all terrain,
     not just hills - fixes bug #18216
   * Fixed some Khalifate unit animation glitches
   * The XP required for an AMLA is now 50*level (and 25 for level 0) instead of
     always 150.
   * Increased the HP of the Great Mage from 55 to 60.
 * User interface
   * Removed waypoints UI feature
   * Added an option to disable the "loading save from a different version"
     confirmation dialog
   * Line-wrap author names in the add-on description dialog (bug #18691)
   * Added option in advanced preferences that allows the twelve-hour clock
      format to be used
   * Reenabled "delay shroud updates"
   * Chanaged: Disable pango markup in unit names (bug #17788)
   * It is now possible to remove multiple installed add-ons at the same
     time
   * Slowed units are now tinted to be recognizable at a glance
   * Fixed: Removed old markup style from OOS messages (bug #18387).
   * Fixed: OOS ignore toggle in the save dialog (bug #18330).
 * WML engine:
   * Readded the liminal alignment
   * Added four-difficulty versions of certain macros: QUANTITY4,
     ON_DIFFICULTY4, TURNS4, GOLD4, INCOME4, and ATTACK_DEPTH4
   * added support for SSF to SUF via a [filter_side] subtag
   * added support for [enemy_of]<SSF> to SSF
   * added support for [allied_with]<SSF> to SSF